--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <script src="%PUBLIC_URL%/js/modernizr.js"></script>
     <title>Juan Antonio Mayoral Gutiérrez</title>
@@ -18,7 +19,7 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>
     window.jQuery ||
       document.write('<script src="js/jquery-1.10.2.min.js"><\/script>');
